# Monarch-BioCypher

./: .gitignore  LICENSE  README.md  pyproject.toml  script.py
config/: biocypher_config.yaml  schema_config.yaml
data/: README.txt
monarch_gene_phenotype/: _adapter_enum_utils.py  _adapter_enums_merged.py  adapter.py  adapter_enums.py
